--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -4,7 +4,7 @@
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
-    <title>Home</title>
+    <title>Poseidon - User update</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -15,54 +15,71 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
+<!-- navbar -->
+<div th:replace="fragments/header :: header"></div>
 
-    <div class="row">
-        <h2>Update User</h2>
-    </div>
+<div class="container-lg p-3 bg-light">
 
-    <div class="row">
-        <form action="#" th:action="@{/userEntity/update/{id}(id=${userEntity.id})}" th:object="${userEntity}"
-              method="post" class="form-horizontal" style="width: 100%">
-            <div class="form-group">
-                <label for="fullname" class="col-sm-2 control-label">Full Name</label>
-                <div class="col-sm-10">
-                    <input type="text" th:field="*{fullname}" id="fullname" placeholder="Full Name" class="col-4">
-                    <p class="text-danger" th:if="${#fields.hasErrors('fullname')}" th:errors="*{fullname}"></p>
+    <div class="m-auto w-50">
+
+        <div class="text-center">
+            <h2 class="p-1">Update User</h2>
+            <h3 th:if="${rightUpdatedUser}" class="text-success p-1">User has been successfully updated</h3>
+        </div>
+
+        <div class="w-100 m-auto">
+
+            <form th:action="@{/user/update/{id}(id=${userEntity.id})}" th:object="${userEntity}" method="post">
+
+                <div class="form-group">
+                    <label for="fullName" class="form-label">Full Name</label>
+                    <input type="text" th:field="*{fullName}" id="fullName" placeholder="fullName"
+                           class="form-control" autofocus="autofocus"/>
+                    <p class="text-danger" th:if="${#fields.hasErrors('fullName')}" th:errors="*{fullName}"></p>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="username" class="col-sm-2 control-label">User Name</label>
-                <div class="col-sm-10">
-                    <input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4">
-                    <p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+
+                <div class="form-group">
+                    <label for="userName" class="form-label">User Name</label>
+                    <input type="text" th:field="*{userName}" id="userName" placeholder="userName"
+                           class="form-control"/>
+                    <p class="text-danger" th:if="${#fields.hasErrors('userName')}" th:errors="*{userName}"></p>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-2 control-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4">
+
+                <div class="form-group">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" th:field="*{password}" id="password"
+                           placeholder="new password (old one could be reenter)"
+                           class="form-control"/>
                     <p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-2 control-label">Role</label>
-                <div class="col-sm-10">
-                    <label class="checkbox-inline"><input type="radio" th:field="*{role}" th:value="ADMIN">Admin</label>
-                    <label class="checkbox-inline"><input type="radio" th:field="*{role}" th:value="USER">User</label>
+
+                <div class="form-group">
+                    <label for="password" class="form-label me-3">Role</label>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="inlineRadio1" th:field="*{role}"
+                               th:value="ADMIN"/>
+                        <label class="form-check-label" for="inlineRadio1">Admin</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" id="inlineRadio2" th:field="*{role}"
+                               th:value="USER"/>
+                        <label class="form-check-label" for="inlineRadio2">User</label>
+                    </div>
+                    <p class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></p>
+
                 </div>
-            </div>
 
-
-            <div class="form-group">
-                <div class="col-sm-12">
-                    <input type="hidden" th:field="*{id}">
-                    <a class="btn btn-danger btn-sm" href="/userEntity/list">Cancel</a>
-                    <input class="btn btn-primary btn-sm" type="submit" value="Update User">
+                <div class="form-group">
+                    <div class="d-flex justify-content-between">
+                        <!--suppress HtmlUnknownTarget -->
+                        <a class="btn btn-danger w-25" href="/user/list">Cancel</a>
+                        <input class="btn btn-primary w-50" type="submit" value="Update User"/>
+                    </div>
                 </div>
-            </div>
 
-        </form>
+            </form>
+        </div>
+
     </div>
 
 </div>
