--- a/src/main/resources/templates/bid/add.html
+++ b/src/main/resources/templates/bid/add.html
@@ -4,7 +4,7 @@
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
-    <title>Home</title>
+    <title>Poseidon - Add Bid</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -15,19 +15,55 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
+<div class="container-lg p-3 bg-light">
 
-    <div class="row">
-        <h2>Add New Bid</h2>
+    <div class="bg-secondary w-100 p-1 text-center m-auto">
+        <h1>Poseidon</h1>
     </div>
 
-    <div class="row">
-        <form action="#" th:action="@{/bidEntity/validate}" th:object="${bidEntity}" method="post"
-              class="form-horizontal" style="width: 100%">
-            <!--
-            TODO: Create a form to input the values of Bid, there are 2 buttons: Save data and Cancel to the list Bid
-             -->
-        </form>
+    <div class="m-auto w-50">
+
+        <div class="text-center">
+            <h2 class="p-1">Add New Bid</h2>
+            <h3 th:if="${wrongCreatedBid}" class="text-danger p-1">account already exists - please choose a new
+                one</h3>
+        </div>
+
+        <div class="w-100 m-auto">
+
+            <form th:action="@{/bid/add}" th:object="${bidEntity}" method="post">
+
+                <div class="form-group p-1">
+                    <label for="account" class="form-label">account</label>
+                    <input type="text" th:field="*{account}" id="account" placeholder="account"
+                           class="form-control" autofocus="autofocus"/>
+                    <p class="text-danger" th:if="${#fields.hasErrors('account')}" th:errors="*{account}"></p>
+                </div>
+
+                <div class="form-group p-1">
+                    <label for="type" class="form-label">type</label>
+                    <input type="text" th:field="*{type}" id="type" placeholder="type"
+                           class="form-control"/>
+                    <p class="text-danger" th:if="${#fields.hasErrors('type')}" th:errors="*{type}"></p>
+                </div>
+
+                <div class="form-group p-1">
+                    <label for="bidQuantity" class="form-label">bidQuantity</label>
+                    <input type="number" step="0.01" th:field="*{bidQuantity}" id="bidQuantity"
+                           placeholder="bidQuantity" class="form-control"/>
+                    <p class="text-danger" th:if="${#fields.hasErrors('bidQuantity')}" th:errors="*{bidQuantity}"></p>
+                </div>
+
+                <div class="form-group p-1">
+                    <div class="d-flex justify-content-between">
+                        <a class="btn btn-danger w-25" href="/bid/list">Cancel</a>
+                        <input class="btn btn-primary w-50" type="submit" value="Add Bid"/>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+
     </div>
 
 </div>
