--- a/src/main/resources/templates/bid/list.html
+++ b/src/main/resources/templates/bid/list.html
@@ -4,7 +4,7 @@
       lang="en-us">
 <head>
     <meta charset="utf-8"/>
-    <title>Home</title>
+    <title>Poseidon - Bid list</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
@@ -15,37 +15,45 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
-    <div class="row">
-        <div class="col-6">
-            <a href="/bidEntity/list">Bid List</a>&nbsp;|&nbsp;
-            <a href="/curveEntity/list">Curve Points</a>&nbsp;|&nbsp;
-            <a href="/ratingEntity/list">Ratings</a>&nbsp;|&nbsp;
-            <a href="/tradeEntity/list">Trade</a>&nbsp;|&nbsp;
-            <a href="/ruleEntity/list">Rule</a>
-        </div>
-        <div class="col-6 text-right">
-            Logged in userEntity: <b th:inline="text" class="userEntity"> [[${#httpServletRequest.remoteUser}]] </b>
-            <form th:action="@{/app-logout}" method="POST">
-                <input type="submit" value="Logout"/>
-            </form>
-        </div>
+<!-- navbar -->
+<div th:replace="a.fragments/header :: header"></div>
+
+<div class="container-lg p-3 bg-light">
+    <div class="p-1 text-center">
+        <h2>Bid List</h2>
+        <h3 th:if="${missingBidId}" class="text-danger p-1">can't update/delete missing bid - please choose a new
+            one</h3>
+        <h3 th:if="${rightCreatedBid}" class="text-success p-1">bid has been successfully added</h3>
+        <h3 th:if="${rightDeletedBid}" class="text-success p-1">bid has been successfully deleted</h3>
     </div>
-    <div class="row"><h2>Bid List</h2></div>
-    <div class="row">
-        <a href="/bidEntity/add" class="btn btn-primary btn-sm">Add New</a>
-        <table class="table table-bordered">
-            <thead>
+
+    <div class="p-1 m-auto w-75">
+        <!--suppress HtmlUnknownTarget -->
+        <a href="/bid/add" class="btn btn-primary w-100">Add New Bid</a>
+    </div>
+
+    <div class="p-1">
+        <table class="table table-bordered table-striped text-center m-0">
+            <thead class="bg-secondary text-white">
             <tr>
                 <th>Id</th>
-                <th>Account</th>
-                <th>Type</th>
-                <th>Bid Quantity</th>
+                <th>account</th>
+                <th>type</th>
+                <th>bidQuantity</th>
                 <th>Action</th>
             </tr>
             </thead>
             <tbody>
-            <!-- TODO: Show all Bids to the table, the Action column will have Edit & Delete buttons -->
+            <tr th:each="bidEntity : ${bidEntities}">
+                <td th:text="${bidEntity.id}"></td>
+                <td th:text="${bidEntity.account}"></td>
+                <td th:text="${bidEntity.type}"></td>
+                <td th:text="${bidEntity.bidQuantity}"></td>
+                <td class="text-center">
+                    <a th:href="@{/bid/update/{id}(id=${bidEntity.id})}">Edit</a>&nbsp;|&nbsp;
+                    <a th:href="@{/bid/delete/{id}(id=${bidEntity.id})}">Delete</a>
+                </td>
+            </tr>
             </tbody>
         </table>
     </div>
