--- a/src/main/resources/templates/a.fragments/header.html
+++ b/src/main/resources/templates/a.fragments/header.html
@@ -17,7 +17,11 @@
 <div class="container-lg p-3 d-flex justify-content-between" th:fragment="header">
 
     <div class="w-25 btn bg-secondary my-auto">
-        <p class="text-white my-auto">Poseidon</p>
+        <p class="my-auto">
+            <span th:text="${username}"></span>
+            <span>@</span>
+            <span class="text-white">Poseidon</span>
+        </p>
     </div>
 
     <nav>
